@@ -1,4 +1,4 @@
-.\" RCSid "$Id: meta2tga.1,v 1.2 2003/12/09 15:59:06 greg Exp $"
+.\" RCSid "$Id: meta2tga.1,v 1.3 2005/05/04 23:43:18 greg Exp $"
 .TH META2TGA 1 6/24/98 RADIANCE
 .SH NAME
 meta2tga - convert metafile to Targa image format
@@ -63,5 +63,5 @@ see pexpand(1) and psort(1)
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-bgraph(1), igraph(1), imagew(1), mx80(1), pexpand(1),
+bgraph(1), igraph(1), imagew(1), meta2bmp(1), mx80(1), pexpand(1),
 psort(1), ra_t8(1), t4014(1)
